jam: exercise host pool on generic CPU